# pheme-rumour-baseline

./: .gitignore  README.md  check_duplicates.py  check_length.py  competing_wisdom.py  config.py  eda.py  error_analysis.py  generate_explanations.py  hello_llm.py  main.py  prepare_data.py  pyproject.toml  split_data.py  train_bert.py  train_bert_ablation.py  train_bert_augmented.py  train_tfidf.py  train_tfidf_compare.py
docs/: methodology.md
results/: results_ablation.json  results_augmented.json  results_baseline.json
