[project]
name = "pheme-rumour-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]
